--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx listen.ts",
     "build": "tsc",
-    "start": "node index.js"
+    "start": "node dist/listen.js",
+    "docker:build": "docker build -t certify-server .",
+    "docker:run": "docker-compose up -d",
+    "docker:stop": "docker-compose down",
+    "docker:logs": "docker-compose logs -f certify-server"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +22,13 @@
     "@bsv/sdk": "^1.6.19",
     "@bsv/wallet-toolbox-client": "^1.5.17",
     "body-parser": "^2.2.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "dotenv": "^16.4.5"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.24",
+    "tsx": "^4.7.1",
+    "typescript": "^5.3.3"
   }
 }
